--- a/src/style.module.css
+++ b/src/style.module.css
@@ -1,33 +1,16 @@
-.container {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto;
-  padding: 10px;
-}
-
-.gridItem {
-  margin: 5px;
-  text-align: center;
-  background-color: grey;
-  color: white;
-  display: flex;
-  align-items: center;
-  padding: 5px;
-  justify-content: center;
-  word-break: break-word;
-  padding: 20px 0;
-  font-size: 16px;
-}
-
 .selectedItem {
+  background-color: #1976d2;
   color: white;
   text-align: center;
   font-size: 28px;
   padding: 20px 0;
 }
 
-.on {
-  background-color: green;
-  margin: 20px;
+.destination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
 }
 
 .counter {
